# dpdk-firewall

./: .gitignore  .gitmodules  README.md  build.sh  deploy.sh  run.sh
app/: meson.build  module_section.lds
app/config/: acl.json  interface.json
app/docs/: kni.md  nic-multi-queue.md
app/firewall/: cli.c  cli.h  config.c  config.h  json.c  json.h  main.c  meson.build  module.c  module.h  packet.h  worker.c  worker.h
app/firewall/acl/: acl.c  acl.h
app/firewall/decode/: decode.c  decode.h
app/firewall/interface/: interface.c  interface.h
examples/l3fwd/: l3fwd_lpm.c  main.c
kmods/linux/igb_uio/: igb_uio.c
lib/acl/: rte_acl.c  rte_acl.h
lib/eal/common/: eal_common_log.c
lib/eal/include/: rte_log.h
